<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDE8B"
    tools:context=".CreatureEdit">

    <EditText
        android:id="@+id/NameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@color/TextBox"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/Text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="224dp"
        android:background="@color/TextBox"
        android:hint="@string/additional_notes"
        android:textAlignment="center"
        android:textColor="@color/Text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <Button
        android:id="@+id/DoneEditingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/finish"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/InitativeNumber"
        android:layout_width="91dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:background="@color/TextBox"
        android:ems="10"
        android:hint="@string/initiative"
        android:inputType="number"
        android:maxLength="50"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameEdit"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/CurrentHealth"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@color/TextBox"
        android:ems="10"
        android:hint="@string/current_hp"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/MaxHealth"
        app:layout_constraintTop_toBottomOf="@+id/InitativeNumber"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/MaxHealth"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:background="@color/TextBox"
        android:ems="10"
        android:hint="@string/max_hp"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InitativeNumber"
        android:importantForAutofill="no" />


</androidx.constraintlayout.widget.ConstraintLayout>